--- a/src/main/resources/templates/form-usuario.html
+++ b/src/main/resources/templates/form-usuario.html
@@ -8,7 +8,7 @@
 
     <link
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+	rel="stylesheet">
     <link href="../../static/css/style.css" th:href="@{/css/style.css}"
 	rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -35,6 +35,7 @@
       </div>
     </div>
     
+    
     <!-- Text input-->
     
     <div class="form-group">
@@ -47,18 +48,15 @@
       </div>
     </div>
     
-      <div class="form-group"> 
-      <label class="col-md-4 control-label">Lista de porras</label>
-        <div class="col-md-4 selectContainer">
-        <div class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-list"></i></span>
-         <select th:field=*{porra} class="form-control">
-         <option th:each="porra : $ {porra.nombre}"
-         th:value="${porra.id}" th:text="${porra.nombre}">Porra</option>
-         </select>
+     <div class="form-group">
+      <label class="col-md-4 control-label">URL de la Imagen</label>  
+      <div class="col-md-4 inputGroupContainer">
+      <div class="input-group">
+      <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+      <input  name="url_image" placeholder="link aquí" class="form-control"  type="text" th:field="*{imagen}">
+        </div>
       </div>
-    </div>
-    </div>
+    </div>  
       
     <!-- Text input-->
     
