--- a/src/main/resources/templates/list-usuario.html
+++ b/src/main/resources/templates/list-usuario.html
@@ -23,28 +23,27 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>                        
             </button>
-            <a class="navbar-brand" href="index_sin_modal.html">M&M Custom shop</a>
+            <a class="navbar-brand" href="index_sin_modal.html">Porritas Manuel</a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
               <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Hombre
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">porras
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="hombre_nueva_coleccion.html">Nueva Colección</a></li>
-                  <li><a href="hombre_rebajas.html">Rebajas</a></li>
+                  <li><a href="#">Tus porras</a></li>
+                  <li><a href="#">Todas las porras</a></li>
                 </ul>
               </li>
               <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Mujer
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Usuario
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="mujer_nueva_coleccion.html">Nueva Colección</a></li>
-                  <li><a href="mujer_rebajas.html">Rebajas</a></li>
+                  <li><a href="#">Ver usuarios</a></li>
+                  <li><a href="#">Modificar usuarios</a></li>
                 </ul>
               </li>
-              <li><a href="niños.html">Niños</a></li>
-              <li><a href="tarjeta_regalo.html">Tarjeta Regalo</a></li>
+              <li><a href="niños.html">Resultados</a></li>
             </ul>
           </div>
         </div>
@@ -54,9 +53,8 @@
     
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1>NUEVA COLECCIÓN</h1>      
-        <p>Si te gusta ir a la última este será tu sitio favorito en el que combinamos el mejor precio 
-          con la última moda. ¿Qué más se puede pedir?</p>
+        <h1>Porras Manuel</h1>      
+        <p>Usuarios</p>
       </div>
     </div>
     
