--- a/src/main/resources/templates/list-usuario.html
+++ b/src/main/resources/templates/list-usuario.html
@@ -58,221 +58,44 @@
       </div>
     </div>
     
-    <div class="container text-center">
-    
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc1.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">EMIDIO TUCCI</h4>
-              <p class="card-text">Jersey de hombre azul con el cuello redondo</p>
-              <h4 class="card-title">39,95 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-    
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc2.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">DUSTIN</h4>
-              <p class="card-text">Polo de hombre classic gris de manga larga</p>
-              <h4 class="card-title">33,40 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-    
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc3.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">DUSTIN</h4>
-              <p class="card-text">Americana de hombre regular liso azul</p>
-              <h4 class="card-title">99,95 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-    
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc4.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">EMIDIO TUCCI</h4>
-              <p class="card-text">Chino de hombre custom marrón</p>
-              <h4 class="card-title">49,95 €</h4>
-              <a href="tarjeta_regalo.htmerror404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-    
-      </div>
-    
-      <br><br><br><br>
-    
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc5.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">DUSTIN</h4>
-              <p class="card-text">Americana de hombre regular microestampada gris</p>
-              <h4 class="card-title">90,30 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-      
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc6.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">LLOYD'S</h4>
-              <p class="card-text">Chaleco de hombre acolchado amarillo</p>
-              <h4 class="card-title">69.95 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-      
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc7.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">EMIDIO TUCCI</h4>
-              <p class="card-text">Chino de hombre custom azul</p>
-              <h4 class="card-title">49,95 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-      
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc8.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">GREEN COAST</h4>
-              <p class="card-text">Chaleco acolchado de hombre azul marino</p>
-              <h4 class="card-title">27,99 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    
-      <br><br><br><br>
-    
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc9.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">EASY WEAR</h4>
-              <p class="card-text">Camiseta de hombre con algodón orgánico mostaza de manga corta</p>
-              <h4 class="card-title">9,99 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-      
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc10.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">GREEN COAST</h4>
-              <p class="card-text">Sudadera de hombre antracita con capucha</p>
-              <h4 class="card-title">20.99 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-      
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc11.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">EASY WEAR</h4>
-              <p class="card-text">Chaleco acolchado ligero de hombre mostaza</p>
-              <h4 class="card-title">23,99 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-      
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc12.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">GREEN COAST</h4>
-              <p class="card-text">Cazadora vaquera de hombre azul</p>
-              <h4 class="card-title">27,99 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    
-      <br><br><br><br>
-    
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc13.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">STUDIO CLASSICS</h4>
-              <p class="card-text">Sudadera de hombre crudo con cuello redondo</p>
-              <h4 class="card-title">25,19 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-      
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc14.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">EMIDIO TUCCI</h4>
-              <p class="card-text">Camisa de hombre regular de cuadros multicolor</p>
-              <h4 class="card-title">39,45 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-      
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc15.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">EASY WEAR</h4>
-              <p class="card-text">Sudadera de hombre gris claro con cuello redondo</p>
-              <h4 class="card-title">16,09 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-      
-        <div class="col-sm-3">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="img/nueva_coleccion_hombre/nc16.webp" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">EMIDIO TUCCI</h4>
-              <p class="card-text">Americana de hombre regular de punto azul</p>
-              <h4 class="card-title">149 €</h4>
-              <a href="error404.html" class="btn btn-warning">Añadir al carrito</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    
-    
+    <div class="container">
+		<div class="row">
+			<div class="col-md-offset-1 col-md-10">
+				<div class="pull-right">
+					<a href="form-usuario.html" th:href="@{/usuario/nuevo/}" class="btn btn-primary">Nuevo
+						Usuario</a>
+
+				</div>
+
+				<table class="table">
+					<thead>
+						<tr>
+							<th>Imagen</th>
+							<th>Nombre</th>
+							<th>Apellidos</th>
+							<th>Saldo</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="usuario : ${usuarios}">
+							<td><img
+								th:src="${not (#strings.isEmpty(usuario.imagen))} 
+								              ? ${usuario.imagen} : 'https://blog.aulaformativa.com/wp-content/uploads/2016/08/consideraciones-mejorar-primera-experiencia-de-usuario-aplicaciones-web-perfil-usuario.jpg'"
+								class="img-responsive icono-categoria" alt="imagen" /></td>
+							<td th:text="${usuario.nombre}"></td>
+							<td th:text="${usuario.apellidos}">
+							<td th:text="${#numbers.formatCurrency(usuario.saldo)}"></td>
+							<td class="operaciones"><a href="#"
+								th:href="@{/usuario/editar/{id}(id=${usuario.id})}"
+								class="btn btn-primary">Editar</a>
+								<button type="button" class="btn btn-danger" data-toggle="modal"
+									data-target="#delete-modal" th:data-id="${usuario.id}">Borrar</button></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
     </div>
-    
-    
-    <br>
-    
     <!-- Footer -->
     <footer class="bg-light text-center text-lg-start">
         <div class="row">
