--- a/src/main/resources/templates/list-porra.html
+++ b/src/main/resources/templates/list-porra.html
@@ -23,12 +23,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>                        
             </button>
-            <a class="navbar-brand" href="index_sin_modal.html">Porritas Manuel</a>
+            <a class="navbar-brand" href="/usuario">Porritas Manuel</a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
               <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">porras
+                <a class="dropdown-toggle" data-toggle="dropdown" href="/porra">porras
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="#">Tus porras</a></li>
@@ -36,7 +36,7 @@
                 </ul>
               </li>
               <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Porras
+                <a class="dropdown-toggle" data-toggle="dropdown" href="/usuario">Usuarios
                 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="#">Ver usuarios</a></li>
@@ -62,8 +62,8 @@
 		<div class="row">
 			<div class="col-md-offset-1 col-md-10">
 				<div class="pull-right">
-					<a href="form-usuario.html" th:href="@{/usuario/nuevo/}" class="btn btn-primary">Nuevo
-						Usuario</a>
+					<a href="form-usuario.html" th:href="@{/porra/nuevo/}" class="btn btn-primary">Nueva
+						Porra</a>
 
 				</div>
 
@@ -80,7 +80,7 @@
 						<tr th:each="porra : ${porras}">
 						    <td th:text="${porra.nombre}"></td>
                             <td>
-                                <textarea name="desc" id="desc"  rows="3" class="form-control"th:text="${porra.descripcion"></textarea>
+                                <textarea name="desc" id="desc"  rows="3" class="form-control"th:text="${porra.descripcion}"></textarea>
                             </td>
 							<td th:text="${porra.equipoLocal}">
 							<td th:text="${porra.equipoVisitante}"></td>
@@ -100,13 +100,12 @@
         <div class="row">
           
           <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Sobre nosotros</h5>
-            <p>Esta sitio web ha sido creado exclusivamente con fin educativo, para aprender el uso de Boostrap.
-              Somos dos alumnos del Grado superior de Desarrollo de Aplicaciones Multipataformas, cursando el primer
+            <h5 class="text-uppercase">Sobre el autor</h5>
+            <p>Esta aplicación web ha sido creada exclusivamente con fin educativo, para realizar el proyecto final.
+              Estudio en el Grado superior de Desarrollo de Aplicaciones Multipataformas, cursando el primer
               año en el Colegio Salesiano de Triana (Sevilla)
             </p>
             <br>
-            <p> Teléfono de pedidos: 900 533 433</p>
             <p>Teléfono de atención al cliente: 900 373 111</p>
           </div>
           
@@ -117,7 +116,7 @@
     
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="https://static.zara.net/static//pdfs/ES/privacy-policy/privacy-policy-es_ES-20201030.pdf" class="text-dark">Políticas y Privacidad</a>
+                <a href="https://porraoviedista.es/politica-de-privacidad/">Políticas y Privacidad</a>
               </li>
               <li>
                 <a href="#!" class="text-dark">Intagram</a>
