--- a/src/main/resources/templates/form-apuestaUsuario.html
+++ b/src/main/resources/templates/form-apuestaUsuario.html
@@ -16,11 +16,7 @@
     
 </head>
 <body>
-    
-</body>
-</html>
-
-<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <!-- Modal Header -->
@@ -38,33 +34,37 @@
                 <form class="well form-horizontal" action="#" th:action= "@{apuestaUsuario/nuevo/submit}" method="post"  id="contact_form" th:object="${apuestaUsuario}">
                     <div class="form-group">
                         <label for="reultado">Resultado</label>
-                        <p>Como hacer un select con 1, X, 2</p>
-                        <select
-							
+                        
+                        <select th:field=*{resultado}>
+                        <option value="">---</option>
+                        <option th:each="resultado : ${tipos_resultados}"
+                        	th:value="${resultado}" th:text="${resultado}">
+						Resultado
+						</option>
 						</select>
                     </div>
                     <div class="form-group">
                         <label for="inputDin">Dinero Apostado</label>
-                        <input type="number" class="form-control" id="inputDin" placeholder="1.0" th:field="*{dineroApostado}"/>
-                    </div>
-                    <p>Los select de usuario y Porras</p>
-                    <div class="form-group">
-                        <label for="inputPassword">Contraseña</label>
-                        <input type="password" class="form-control" id="inputPassword" placeholder="Introduzca su contraseña">
+                        <input type="number" class="form-control" id="inputDin" placeholder="1.0" min="0"  th:field="*{dineroApostado}"/>
                     </div>
                     <div class="form-group">
-                        <label for="inputSelect">Región</label>
-                        <select class="form-control" id="inputSelect">
-                          <option>España</option>
-                          <option>Inglaterra</option>
-                          <option>Francia</option>
-                          <option>Estados Unidos</option>
-                          <option>Italia</option>
-                          <option>China</option>
-                          <option>Portugal</option>
-                          <option>Alemania</option>
+                        <label for="inputSelect">Usuarios</label>
+                        <select th:field="*{usuario}" class="form-control" id="inputSelect">
+                          <option value="-1">---</option>
+                          <option th:each="usuario : ${usuarios}" th:value="${usuario.id}" th:text="${usuario.nombre}">Usuarios</option>
+                          
                         </select>
                     </div>
+                    
+                    <div class="form-group">
+                        <label for="inputSelect">Porras</label>
+                        <select th:field="*{porra}" class="form-control" id="inputSelect">
+                          <option value="-1">---</option>
+                          <option th:each="porra : ${porras}" th:value="${porra.id}" th:text="${porra.nombre}">Porras</option>
+                          
+                        </select>
+                    </div>
+                    
                     
 
                 </form>
@@ -77,3 +77,6 @@
         </div>
     </div>
 </div>
+</body>
+</html>
+
