--- a/src/main/resources/templates/form-porra.html
+++ b/src/main/resources/templates/form-porra.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
 
-        <form class="well form-horizontal" action="#" th:action= "@{porra/nuevo/submit}" method="post"  id="contact_form" th:object="${porra">
+        <form class="well form-horizontal" action="#" th:action= "@{porra/nuevo/submit}" method="post"  id="contact_form" th:object="${porra}">
     <fieldset>
     
     <!-- Form Name -->
