--- a/src/main/resources/templates/form-usuario.html
+++ b/src/main/resources/templates/form-usuario.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
 
-        <form class="well form-horizontal" action="#" th:action= "@{usuario/nuevo/submit}" method="post"  id="contact_form" th:object="${usuario}">
+        <form method="post" action="#" th:action="@{/usuario/nuevo/submit}" th:object="${usuario}" class="well form-horizontal">
     <fieldset>
     
     <!-- Form Name -->
@@ -65,7 +65,7 @@
       <div class="col-md-4 inputGroupContainer">
       <div class="input-group">
       <span class="input-group-addon"><i class="bi bi-cash"></i></span>
-      <input  name="user_cash" placeholder="Su Saldo" class="form-control"  type="number" th:field="*{saldo}">
+      <input  name="user_cash" placeholder="Su Saldo" class="form-control"  type="number" min="0" th:field="*{saldo}">
         </div>
       </div>
     </div>
@@ -88,12 +88,8 @@
     <div class="alert alert-success" role="alert" id="success_message"> <i class="glyphicon glyphicon-thumbs-up"></i></div>
     
     <!-- Button -->
-    <div class="form-group">
-      <label class="col-md-4 control-label"></label>
-      <div class="col-md-4"><br>
-        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<button type="submit" class="btn btn-warning" >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSUBMIT <span class="glyphicon glyphicon-send"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</button>
-      </div>
-    </div>
+     <button type="submit" class="btn btn-default">Enviar</button>
+    
     
     </fieldset>
     </form>
