--- a/src/main/resources/templates/list-usuario.html
+++ b/src/main/resources/templates/list-usuario.html
@@ -6,44 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
 
-    <link
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-	rel="stylesheet">
-    <link href="../../static/css/style.css" th:href="@{/css/style.css}"
-	rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" 
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>                        
-            </button>
-            <a class="navbar-brand" href="/usuario">Porritas Manuel</a>
-          </div>
-          <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="/porra">porras
-                <span class="caret"></span></a>
-              </li>
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="/usuario">Usuario
-                <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="/usuario">Ver usuarios</a></li>
-                  <li><a href="/usuario/edit">Modificar usuarios</a></li>
-                </ul>
-              </li>
-              <li><a href="niños.html">Resultados</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+    <div class="container">
+    	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    		<a class="navbar-brand text-white">
+    			<img alt="logo" src="https://www.porras.online/assets/login/images/xporras-logo-5-1000x600.jpg.pagespeed.ic.R2yWStfFUn.jpg" height="60px">
+    		</a>
+    			<div class="collapse navbar-collapse" id="menu">
+    				<ul class="navbar-nav mr-auto">
+    					<li class="nav-item active">
+    						<a href="/usuario" class="nav-link">Porritas Manuel</a>
+    					</li>
+    					<li class="nav-item active">
+    						<a href="/usuario" class="nav-link">Usuarios</a>
+    					</li>
+    					<li class="nav-item active">
+    						<a href="/porra" class="nav-link">Porras</a>
+    					</li>
+    					<li class="nav-item active">
+    						<a href="/apuestaUsuario" class="nav-link">Apuestas de usuario</a>
+    					</li>
+    				</ul>
+    				<span class="navbar-text">
+    					Gestión de porras y usuarios
+    				</span>
+    			</div>
+    		</nav>
+    </div>
     
     <!-- Jumbotron -->
     
@@ -159,7 +156,7 @@
 	</div>
     
 
-	<script src="../../js/modal.js" th:src="@{/js/modal.js}"></script>
+	<script src="../js/modal.js" th:src="@{/js/modal.js}"></script>
     
 </body>
 </html>
