--- a/src/main/resources/templates/form-apuestaUsuario.html
+++ b/src/main/resources/templates/form-apuestaUsuario.html
@@ -16,17 +16,12 @@
     
 </head>
 <body>
-    <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <!-- Modal Header -->
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">
-                    <span aria-hidden="true">×</span>
+	
+	
                     
-                </button>
+                
                 <h4 class="modal-title" id="myModalLabel">Formulario de Registro <span class="marca">Apuesta Usuario</span></h4>
-            </div>
+            
             
             <!-- Modal Body -->
             <div class="modal-body">
@@ -72,11 +67,9 @@
             
             <!-- Modal Footer -->
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary submitBtn btn-lg">ENVIAR</button>
+                <button type="submit" class="btn btn-primary submitBtn btn-lg">ENVIAR</button>
             </div>
-        </div>
-    </div>
-</div>
+      
 </body>
 </html>
 
